--- a/01.LearnHTML&CSS/cgv/index.html
+++ b/01.LearnHTML&CSS/cgv/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="#"><img src="./img/cgv logo.png" alt="#"></a>
-        <div>
+        <div>   
             <a href="#"><img src="./img/card_banner.png" alt="#"></a>
             <div>
                 <a href="#"><img src="./img/lock.jpg" alt="#"></a>
@@ -157,6 +157,110 @@
                         <p>예매하기</p>
                     </div>
                     <p>2023 LoL 월드챔피언십 결승</p>
+                    <div>   
+                        <div>
+                            <img src="./img/reward.png" alt="#">
+                            <p>99%</p>
+                        </div>
+                        <div>
+                            <p>예매율</p>
+                            <p>12.2%</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="./img/poster03.jpg" alt="#">
+                    <div>
+                        <p>상세보기</p>
+                        <p>예매하기</p>
+                    </div>
+                    <p>헝거게임-노래하는 새와 뱀의 발라드</p>
+                    <div>   
+                        <div>
+                            <img src="./img/reward.png" alt="#">
+                            <p>99%</p>
+                        </div>
+                        <div>
+                            <p>예매율</p>
+                            <p>12.2%</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="./img/poster04.jpg" alt="#">
+                    <div>
+                        <p>상세보기</p>
+                        <p>예매하기</p>
+                    </div>
+                    <p>프레디의 피자가게</p>
+                    <div>   
+                        <div>
+                            <img src="./img/reward.png" alt="#">
+                            <p>99%</p>
+                        </div>
+                        <div>
+                            <p>예매율</p>
+                            <p>12.2%</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="./img/poster05.jpg" alt="#">
+                    <div>
+                        <p>상세보기</p>
+                        <p>예매하기</p>
+                    </div>
+                    <p>싱글 인 서울</p>
+                    <div>   
+                        <div>
+                            <img src="./img/reward.png" alt="#">
+                            <p>99%</p>
+                        </div>
+                        <div>
+                            <p>예매율</p>
+                            <p>12.2%</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="event">
+            <div class="event_head">
+                <p>EVENT</p>
+                <p>상세보기></p>
+            </div>
+            <div>
+                <div class="event_banner">
+                    <img src="./img/event.jpg" alt="">
+                    <p>MOINTS X PRISM OF</p>
+                    <p>2023.10.17 ~ 2023.11.23</p>
+                </div>
+            </div>
+        </div>
+        <div class="special">
+            <div>
+                <p>특별관</p>
+                <p>전체보기></p>
+            </div>
+            <div>
+                <div class="slide">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div>
+                    <div>
+                        <p>SUITE CINEMA</p>
+                        <P>#호텔 컨셉의 프리미엄관</P>
+                    </div>
+                    <div>
+                        <p>CINE & LIVINGROOM</p>
+                        <P>#신개념 소셜 상영관</P>
+                    </div>
+                    <div>
                         <p>4DX</p>
                         <P>#모션시트 #오감체험</P>
                     </div>
@@ -167,6 +271,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </main>
     <footer>
         <div>
